added images and text, fixed layout and styling. site simple but working as intended

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Oh, it's working!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Eli Whitbread</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-custom">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Eli Whitbread</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="mywork.html">My Work</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <br>
+        <br>
+        <div id="myh1"><h1>Well hello there, and welcome!</h1></div>
+        <br>
+        <div id="mybodytext"><p>My name is Eli Whitbread, a game developer and programmer from Melbourne Australia.</p></div>
+        <br>
+        <div id="mybodytext"><p>I discovered the Unity game engine back in 2012, learning as much as I could, building prototypes and releasing 2 mobile games on Android, and a PC game on itch.io. Since 2021 though Unreal has become my game engine of choice; I do prefer working in C++ in Unreal but am comfortable with Blueprints as well.</p></div>
+        <br>
+        <div id="mybodytext"><p>I have worked professionally as a Gameplay Programmer since 2022, helping develop a wonderful 3rd person multiplayer game called Town Squared (<em>Playlunch Games</em>), using Unreal/C++.</p></div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer-custom">
+    <div class="container text-center">
+	  <p>contact: <b>eli.whitbread@gmail.com</b></p>
+      <p>&copy; 2023 Eli Whitbread</p>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
