--- a/mywork.html
+++ b/mywork.html
@@ -50,7 +50,7 @@
             <p>Game engine: Unreal Engine<br>
               Language: C++ / Blueprints<br>
               Platforms: iOS, Android, PC<br>
-              Other: Git, Slack, Discord
+              Other: Git, Slack
             </p>
             <h6>Among other things, my work included:</h6>
             <ul>
