--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-custom">
       <div class="container">
         <a class="navbar-brand" href="index.html">Eli Whitbread</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <span class="line"></span> 
+          <span class="line"></span> 
+          <span class="line" style="margin-bottom: 0;"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
