new contact page. add linkedin logo and made footer email address a mailto.

--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,16 @@
       <div class="container">
         <br>
         <br>
-        <div id="myh1"><h1>Well hello there, and welcome!</h1></div>
+        <div id="myh1"><h1>Contact Me</h1></div>
         <br>
-        <div id="mybodytext"><p>My name is Eli Whitbread, a game developer and programmer from Melbourne Australia.</p></div>
         <br>
-        <div id="mybodytext"><p>I discovered the Unity game engine back in 2012, learning as much as I could, building prototypes and releasing 2 mobile games on Android, and a PC game on itch.io. Since 2021 though Unreal has become my game engine of choice; I do prefer working in C++ in Unreal but am comfortable with Blueprints as well.</p></div>
+        <div id="mybodytext"><p>Email: <a href="mailto:eli.whitbread@gmail.com" class="mail"><b>eli.whitbread@gmail.com</b></a></p></div>
         <br>
-        <div id="mybodytext"><p>I have worked professionally as a Gameplay Programmer since 2022, helping develop a wonderful 3rd person multiplayer game called Town Squared (<em>Playlunch Games</em>), using Unreal/C++.</p></div>
+        <br>
+        <div id="mybodytext">
+          <a href="https://linkedin.com/in/eli-whitbread" target="_blank" class="mail">Visit me on</a>
+        </div>
+        <a href="https://linkedin.com/in/eli-whitbread" target="_blank"><img alt="Linkedin link" src="images/li-logo.png" class="store-badge-simple"></a>
       </div>
     </section>
   </main>
