--- a/mywork.html
+++ b/mywork.html
@@ -24,6 +24,9 @@
             <li class="nav-item">
               <a class="nav-link" href="mywork.html">My Work</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact Me</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -248,7 +251,7 @@
 
   <footer class="bg-dark text-white fixed-bottom">
     <div class="container text-center">
-      <p>contact: <b>eli.whitbread@gmail.com</b></p>
+      <p>contact: <a href="mailto:eli.whitbread@gmail.com" class="mail"><b>eli.whitbread@gmail.com</b></a></p>
       <p>&copy; 2023 Eli Whitbread</p>
     </div>
   </footer>
