temp removal of Play Store links from mywork page

--- a/mywork.html
+++ b/mywork.html
@@ -116,7 +116,7 @@
           </div>
           <!-- App Store Buttons -->
             <div>
-              <a href="https://play.google.com/store/apps/details?id=com.eliwhitbread.ZeroGun&amp;hl=en" target="_blank"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" class="store-badge-google"></a>
+              <!-- <a href="https://play.google.com/store/apps/details?id=com.eliwhitbread.ZeroGun&amp;hl=en" target="_blank"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" class="store-badge-google"></a> -->
               <a href="https://sugarbag-games.itch.io/zero-gun" target="_blank"><img alt="Get it on itch.io" src="https://static.itch.io/images/badge.svg" class="store-badge"></a>
             </div>
         </div>
@@ -141,7 +141,7 @@
           </div>
           <!-- App Store Buttons -->
           <div>
-            <a href="https://play.google.com/store/apps/details?id=com.SugarbagGames.WhatNoooo" target="_blank"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" class="store-badge-google"></a>
+            <!-- <a href="https://play.google.com/store/apps/details?id=com.SugarbagGames.WhatNoooo" target="_blank"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" class="store-badge-google"></a> -->
           </div>
         </div>
       </div>
